quiz 1 & lab 1 from week 2

--- a/coursera-stat/lab_1.Rmd
+++ b/coursera-stat/lab_1.Rmd
@@ -1,7 +1,8 @@
 ---
 title: "Introduction to R and RStudio"
-# output: statsr:::statswithr_lab
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 date: "2024-05-01"
 ---
 
