export lab 1 to github_format

--- a/coursera-stat/lab_1.Rmd
+++ b/coursera-stat/lab_1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction to R and RStudio"
 output:
-  pdf_document: default
+  github_document: default
   html_document: default
 date: "2024-05-01"
 ---
